7 October 2014: Wouter
	- Fix per-zone query class statistics.

28 July 2014: Matthijs
	- Bump to 3.2.19

21 July 2014: Wouter
	- Fix endian.h include for OpenBSD.

7 July 2014: Matthijs
	- fake-rfc2553 patch (thanks Benjamin Baier).

30 June 2014: Matthijs
	- Fix RCODE when secondary NSD got transfer that includes
	  deleted wildcard record. After deletion, NSD would serve
	  NODATA, should be NXDOMAIN (thanks Michał Kępień).

30 June 2014: Wouter
	- Fix #590: rrl log did not print wildcard as star.
	- Fix #591: rrl log messages at verbosity level 1.

16 June 2014: Matthijs
	- Fix #587: Default statistics period is 0, fix doc.
	- Fix #553: Fix the shift/reduce conflicts.
	- Fix #580: Create zonedirs when nsd-patch runs.

10 June 2014: Matthijs
	- Fix #587: Default statistics period should be 3600.
 
22 May 2014: Wouter
	- Fix zonefile parse with no whitespace before semicolon comments.

18 March 2014: Wouter
	- (from NSD4): optimised zone read code, and zone write code.

7 February 2014: Wouter
	- Fix #551: change Regent to Copyright holder in the LICENSE,
	  to match the definition on opensource.org for the BSD License.

27 January 2014: Matthijs
	- nsid can be set with "ascii_somestring" in ascii.

27 January 2014: Wouter
	- rcode REFUSED for queries to non-hosted zones.

20 January 2014: Wouter
	- Fix printout of high-chars in TXT on NetBSD.

17 January 2014: Wouter
	- Fix type CAA.
	- Fix type EUI48.

15 January 2014: Matthijs
	- Bump to 3.2.18

13 January 2014: Wouter
	- Check if configure in srcdir collides with outofdir build.

8 January 2014: Matthijs
	- Bugfix #510: Use a different zone stats file per process.
	- Bugfix #542: Match RRSIG TTL with SOA TTL in negative response.
	- From trunk: 
		- 2 January 2014: Wouter - Log ip address for sendto failures.

2 January 2014: Wouter
	- Log ip address for sendto failures.

3 December 2013: Matthijs
	- Support for CAA RRtype (RFC 6844).
	- Bugfix #509: USE_ZONE_STATS uses initialised memory for statistics data.