@@ -216,6 +216,17 @@ domain_table_iterate(domain_table_type *table,
 	return error;
 }
 
+domain_type *domain_previous_existing_child(domain_type* domain)
+{
+	domain_type* parent = domain->parent;
+	domain = domain_previous(domain);
+	while(domain && !domain->is_existing) {
+		if(domain == parent) /* do not walk back above parent */
+			return parent;
+		domain = domain_previous(domain);
+	}
+	return domain;
+}
 
 void
 domain_add_rrset(domain_type *domain, rrset_type *rrset)
@@ -234,6 +245,15 @@ domain_add_rrset(domain_type *domain, rrset_type *rrset)
 
 	while (domain && !domain->is_existing) {
 		domain->is_existing = 1;
+		/* does this name in existance update the parent's
+		 * wildcard closest match? */
+		if(domain->parent
+		   && label_compare(dname_name(domain_dname(domain)),
+			(const uint8_t *) "\001*") <= 0
+		   && dname_compare(domain_dname(domain),
+			domain_dname(domain->parent->wildcard_child_closest_match)) > 0) {
+			domain->parent->wildcard_child_closest_match = domain;
+		}
 		domain = domain->parent;
 	}
 }
